feat: make header

--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>LoftHouse - Жилой комплекс в историческом центре</title>
   <link rel="stylesheet" href="./css/main.css">
 </head>
-<body>
-  
+
+<body class="body">
+  <!-- header -->
+  <header class="header">
+    <div class="container header__wrapper">
+      <div class="header__top">
+        <!-- logo -->
+        <div class="header-logo">
+          <a class="header-logo__link" href="#">
+            <img src="./img/logo.svg" alt="LoftHouse - Жилой комплекс в историческом центре" title="LoftHouse - Жилой комплекс в историческом центре">
+          </a>
+        </div>
+        <!-- /logo -->
+        <nav class="header-nav">
+          <ul class="nav__list">
+            <li class="nav__item"><a class="nav__link" href="#" title="О комплексе">О комплексе</a></li>
+            <li class="nav__item"><a class="nav__link" href="#" title="Район">Район</a></li>
+            <li class="nav__item"><a class="nav__link" href="#" title="Каталог квартир">Каталог квартир</a></li>
+            <li class="nav__item"><a class="nav__link" href="#" title="Ипотека">Ипотека</a></li>
+            <li class="nav__item"><a class="nav__link" href="#" title="Контакты">Контакты</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="header__title">
+        <h1 class="h1__title">Жилой комплекс в историческом центре</h1>
+      </div>
+      <div class="header__footer">footer</div>
+    </div>
+  </header>
+  <!-- header -->
 </body>
+
 </html>
