feat: add header section

--- a/index.html
+++ b/index.html
@@ -32,8 +32,14 @@
       </div>
       <div class="header__title">
         <h1 class="h1__title">Жилой комплекс в историческом центре</h1>
+        <span class="mouse__icon"></span>
       </div>
-      <div class="header__footer">footer</div>
+      <!-- header__footer -->
+      <div class="header__footer">
+        <span class="contacts placeholder__icon">Наб. реки Фонтанки 10-15</span>
+        <span class="contacts phone__icon">8 (812) 123-45-67</span>
+      </div>
+      <!-- /header__footer -->
     </div>
   </header>
   <!-- header -->
