feat: add appartaments section

--- a/index.html
+++ b/index.html
@@ -43,6 +43,59 @@
     </div>
   </header>
   <!-- header -->
+  <main class="main">
+    <!-- testimonials -->
+    <section class="testimonials">
+      <div class="container">
+        <div class="testimonials__wrapper">
+          <!-- card -->
+          <div class="testimonials__card">
+            <img class="card__image" src="./img/testimonials/bench.svg" alt="">
+            <p class="card__text">Рядом исторические парки и скверы</p>
+          </div>
+          <!-- /card -->
+          <!-- card -->
+          <div class="testimonials__card">
+            <img class="card__image" src="./img/testimonials/building.svg" alt="">
+            <p class="card__text">Полностью обустроенный</p>
+          </div>
+          <!-- /card -->
+          <!-- card -->
+          <div class="testimonials__card">
+            <img class="card__image" src="./img/testimonials/fountain.svg" alt="">
+            <p class="card__text">10 фонтанов на территории</p>
+          </div>
+          <!-- /card -->
+          <!-- card -->
+          <div class="testimonials__card">
+            <img class="card__image" src="./img/testimonials/bicycle.svg" alt="">
+            <p class="card__text">6 км велодорожек</p>
+          </div>
+          <!-- /card -->
+        </div>
+      </div>
+    </section>
+    <!-- /testimonials -->
+
+    <!-- appartments -->
+    <section class="appartments">
+      <div class="container">
+        <h2 class="h2__title appartments__title">Наши квартиры</h2>
+        <div class="appartments__wrapper">
+          <!-- card -->
+          <div class="appartments__card">
+            <a class="card__link" href="#" title="Пентхаус “Loft Олимп”">
+              <img class="card__img" src="./img/appartments/1.png" alt="">
+              <h4 class="card__title">Пентхаус “Loft Олимп”</h4>
+            </a>
+          </div>
+          <!-- /card -->
+        </div>
+      </div>
+    </section>
+    <!-- /appartments -->
+
+  </main>
 </body>
 
 </html>
