feat: finish appartaments section

--- a/index.html
+++ b/index.html
@@ -82,14 +82,42 @@
       <div class="container">
         <h2 class="h2__title appartments__title">Наши квартиры</h2>
         <div class="appartments__wrapper">
-          <!-- card -->
+          <div class="grid-2-row">
+                      <!-- card -->
           <div class="appartments__card">
+            <img class="card__img" src="./img/appartments/1.png" alt="Пентхаус “Loft Олимп”">
             <a class="card__link" href="#" title="Пентхаус “Loft Олимп”">
-              <img class="card__img" src="./img/appartments/1.png" alt="">
               <h4 class="card__title">Пентхаус “Loft Олимп”</h4>
             </a>
           </div>
           <!-- /card -->
+          <!-- card -->
+          <div class="appartments__card">
+            <img class="card__img" src="./img/appartments/2.png" alt="Апартаменты “Nice Loft”">
+            <a class="card__link" href="#" title="Апартаменты “Nice Loft”">
+              <h4 class="card__title">Апартаменты “Nice Loft”</h4>
+            </a>
+          </div>
+          <!-- /card -->
+          </div>
+          <div class="grid-2-row">
+                      <!-- card -->
+          <div class="appartments__card">
+            <img class="card__img" src="./img/appartments/3.jpg" alt="Апартаменты “Loft Studio”">
+            <a class="card__link" href="#" title="Апартаменты “Loft Studio”">
+              <h4 class="card__title">Апартаменты “Loft Studio”</h4>
+            </a>
+          </div>
+          <!-- /card -->
+          <!-- card -->
+          <div class="appartments__card">
+            <img class="card__img" src="./img/appartments/4.jpg" alt="Loft квартира “Престиж”">
+            <a class="card__link" href="#" title="Loft квартира “Престиж”">
+              <h4 class="card__title">Loft квартира “Престиж”</h4>
+            </a>
+          </div>
+          <!-- /card -->
+          </div>
         </div>
       </div>
     </section>
