--- a/index.html
+++ b/index.html
@@ -1,129 +1,229 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>LoftHouse - Жилой комплекс в историческом центре</title>
+    <link rel="stylesheet" href="./css/main.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LoftHouse - Жилой комплекс в историческом центре</title>
-  <link rel="stylesheet" href="./css/main.css">
-</head>
-
-<body class="body">
-  <!-- header -->
-  <header class="header">
-    <div class="container header__wrapper">
-      <div class="header__top">
-        <!-- logo -->
-        <div class="header-logo">
-          <a class="header-logo__link" href="#">
-            <img src="./img/logo.svg" alt="LoftHouse - Жилой комплекс в историческом центре" title="LoftHouse - Жилой комплекс в историческом центре">
-          </a>
+  <body class="body">
+    <!-- header -->
+    <header class="header">
+      <div class="container header__wrapper">
+        <div class="header__top">
+          <!-- logo -->
+          <div class="header-logo">
+            <a class="header-logo__link" href="#">
+              <img
+                src="./img/logo.svg"
+                alt="LoftHouse - Жилой комплекс в историческом центре"
+                title="LoftHouse - Жилой комплекс в историческом центре"
+              />
+            </a>
+          </div>
+          <!-- /logo -->
+          <nav class="header-nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a class="nav__link" href="#" title="О комплексе"
+                  >О комплексе</a
+                >
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#" title="Район">Район</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#" title="Каталог квартир"
+                  >Каталог квартир</a
+                >
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#" title="Ипотека">Ипотека</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#" title="Контакты">Контакты</a>
+              </li>
+            </ul>
+          </nav>
         </div>
-        <!-- /logo -->
-        <nav class="header-nav">
-          <ul class="nav__list">
-            <li class="nav__item"><a class="nav__link" href="#" title="О комплексе">О комплексе</a></li>
-            <li class="nav__item"><a class="nav__link" href="#" title="Район">Район</a></li>
-            <li class="nav__item"><a class="nav__link" href="#" title="Каталог квартир">Каталог квартир</a></li>
-            <li class="nav__item"><a class="nav__link" href="#" title="Ипотека">Ипотека</a></li>
-            <li class="nav__item"><a class="nav__link" href="#" title="Контакты">Контакты</a></li>
-          </ul>
-        </nav>
-      </div>
-      <div class="header__title">
-        <h1 class="h1__title">Жилой комплекс в историческом центре</h1>
-        <span class="mouse__icon"></span>
-      </div>
-      <!-- header__footer -->
-      <div class="header__footer">
-        <span class="contacts placeholder__icon">Наб. реки Фонтанки 10-15</span>
-        <span class="contacts phone__icon">8 (812) 123-45-67</span>
-      </div>
-      <!-- /header__footer -->
-    </div>
-  </header>
-  <!-- header -->
-  <main class="main">
-    <!-- testimonials -->
-    <section class="testimonials">
-      <div class="container">
-        <div class="testimonials__wrapper">
-          <!-- card -->
-          <div class="testimonials__card">
-            <img class="card__image" src="./img/testimonials/bench.svg" alt="">
-            <p class="card__text">Рядом исторические парки и скверы</p>
-          </div>
-          <!-- /card -->
-          <!-- card -->
-          <div class="testimonials__card">
-            <img class="card__image" src="./img/testimonials/building.svg" alt="">
-            <p class="card__text">Полностью обустроенный</p>
-          </div>
-          <!-- /card -->
-          <!-- card -->
-          <div class="testimonials__card">
-            <img class="card__image" src="./img/testimonials/fountain.svg" alt="">
-            <p class="card__text">10 фонтанов на территории</p>
-          </div>
-          <!-- /card -->
-          <!-- card -->
-          <div class="testimonials__card">
-            <img class="card__image" src="./img/testimonials/bicycle.svg" alt="">
-            <p class="card__text">6 км велодорожек</p>
-          </div>
-          <!-- /card -->
+        <div class="header__title">
+          <h1 class="h1__title">Жилой комплекс в историческом центре</h1>
+          <span class="mouse__icon"></span>
         </div>
+        <!-- header__footer -->
+        <div class="header__footer">
+          <span class="contacts placeholder__icon"
+            >Наб. реки Фонтанки 10-15</span
+          >
+          <span class="contacts phone__icon">8 (812) 123-45-67</span>
+        </div>
+        <!-- /header__footer -->
       </div>
-    </section>
-    <!-- /testimonials -->
-
-    <!-- appartments -->
-    <section class="appartments">
-      <div class="container">
-        <h2 class="h2__title appartments__title">Наши квартиры</h2>
-        <div class="appartments__wrapper">
-          <div class="grid-2-row">
-                      <!-- card -->
-          <div class="appartments__card">
-            <img class="card__img" src="./img/appartments/1.png" alt="Пентхаус “Loft Олимп”">
-            <a class="card__link" href="#" title="Пентхаус “Loft Олимп”">
-              <h4 class="card__title">Пентхаус “Loft Олимп”</h4>
-            </a>
-          </div>
-          <!-- /card -->
-          <!-- card -->
-          <div class="appartments__card">
-            <img class="card__img" src="./img/appartments/2.png" alt="Апартаменты “Nice Loft”">
-            <a class="card__link" href="#" title="Апартаменты “Nice Loft”">
-              <h4 class="card__title">Апартаменты “Nice Loft”</h4>
-            </a>
-          </div>
-          <!-- /card -->
-          </div>
-          <div class="grid-2-row">
-                      <!-- card -->
-          <div class="appartments__card">
-            <img class="card__img" src="./img/appartments/3.jpg" alt="Апартаменты “Loft Studio”">
-            <a class="card__link" href="#" title="Апартаменты “Loft Studio”">
-              <h4 class="card__title">Апартаменты “Loft Studio”</h4>
-            </a>
-          </div>
-          <!-- /card -->
-          <!-- card -->
-          <div class="appartments__card">
-            <img class="card__img" src="./img/appartments/4.jpg" alt="Loft квартира “Престиж”">
-            <a class="card__link" href="#" title="Loft квартира “Престиж”">
-              <h4 class="card__title">Loft квартира “Престиж”</h4>
-            </a>
-          </div>
-          <!-- /card -->
+    </header>
+    <!-- header -->
+    <main class="main">
+      <!-- testimonials -->
+      <section class="testimonials">
+        <div class="container">
+          <div class="testimonials__wrapper">
+            <!-- card -->
+            <div class="testimonials__card">
+              <img
+                class="card__image"
+                src="./img/testimonials/bench.svg"
+                alt=""
+              />
+              <p class="card__text">Рядом исторические парки и скверы</p>
+            </div>
+            <!-- /card -->
+            <!-- card -->
+            <div class="testimonials__card">
+              <img
+                class="card__image"
+                src="./img/testimonials/building.svg"
+                alt=""
+              />
+              <p class="card__text">Полностью обустроенный</p>
+            </div>
+            <!-- /card -->
+            <!-- card -->
+            <div class="testimonials__card">
+              <img
+                class="card__image"
+                src="./img/testimonials/fountain.svg"
+                alt=""
+              />
+              <p class="card__text">10 фонтанов на территории</p>
+            </div>
+            <!-- /card -->
+            <!-- card -->
+            <div class="testimonials__card">
+              <img
+                class="card__image"
+                src="./img/testimonials/bicycle.svg"
+                alt=""
+              />
+              <p class="card__text">6 км велодорожек</p>
+            </div>
+            <!-- /card -->
           </div>
         </div>
-      </div>
-    </section>
-    <!-- /appartments -->
+      </section>
+      <!-- /testimonials -->
 
-  </main>
-</body>
+      <!-- appartments -->
+      <section class="appartments">
+        <div class="container">
+          <h2 class="h2__title appartments__title">Наши квартиры</h2>
+          <div class="appartments__wrapper">
+            <div class="grid-2-row">
+              <!-- card -->
+              <div class="appartments__card">
+                <img
+                  class="card__img"
+                  src="./img/appartments/1.png"
+                  alt="Пентхаус “Loft Олимп”"
+                />
+                <a class="card__link" href="#" title="Пентхаус “Loft Олимп”">
+                  <h4 class="card__title">Пентхаус “Loft Олимп”</h4>
+                </a>
+              </div>
+              <!-- /card -->
+              <!-- card -->
+              <div class="appartments__card">
+                <img
+                  class="card__img"
+                  src="./img/appartments/2.png"
+                  alt="Апартаменты “Nice Loft”"
+                />
+                <a class="card__link" href="#" title="Апартаменты “Nice Loft”">
+                  <h4 class="card__title">Апартаменты “Nice Loft”</h4>
+                </a>
+              </div>
+              <!-- /card -->
+            </div>
+            <div class="grid-2-row">
+              <!-- card -->
+              <div class="appartments__card">
+                <img
+                  class="card__img"
+                  src="./img/appartments/3.jpg"
+                  alt="Апартаменты “Loft Studio”"
+                />
+                <a
+                  class="card__link"
+                  href="#"
+                  title="Апартаменты “Loft Studio”"
+                >
+                  <h4 class="card__title">Апартаменты “Loft Studio”</h4>
+                </a>
+              </div>
+              <!-- /card -->
+              <!-- card -->
+              <div class="appartments__card">
+                <img
+                  class="card__img"
+                  src="./img/appartments/4.jpg"
+                  alt="Loft квартира “Престиж”"
+                />
+                <a class="card__link" href="#" title="Loft квартира “Престиж”">
+                  <h4 class="card__title">Loft квартира “Престиж”</h4>
+                </a>
+              </div>
+              <!-- /card -->
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- /appartments -->
 
+      <!-- cta -->
+      <section class="cta">
+        <div class="container">
+          <h2 class="h2__title cta__title">Хотите посмотреть?</h2>
+          <div class="grid-2-row cta__content">
+            <!-- text -->
+            <p class="content__text">
+              ЖК LoftHouse – это проект бизнес-класса, расположенный в центре
+              города, на Наб. реки Фонтанки 10-15. Комплекс предлагает своим
+              жильцам квартиры площадью от 40 до 170 кв. м. В здании будет три
+              секции, в которых разместится всего 56 квартир.
+            </p>
+            <!-- /text-->
+            <!-- form -->
+            <form class="content__form" action="#" method="post">
+              <div class="grid-2-row">
+                <div class="input__wrp">
+                  <input class="form-input" type="text" placeholder="Ваше имя" required/>
+                </div>
+                <div class="input__wrp">
+                  <input class="form-input" type="tel" placeholder="Ваш телефон" required/>
+                </div>
+              </div>
+              <div class="grid-2-row center-row">
+                <p class="form-info">
+                  *Мы никому не передаем ваши данные. И не сохраняем ваш номер в
+                  базу.
+                </p>
+                <button class="form-btn" type="submit">Посмотреть район</button>
+              </div>
+            </form>
+            <!-- /form -->
+          </div>
+        </div>
+      </section>
+      <!-- /cta -->
+
+      <!-- video -->
+      <section class="video">
+        <div class="container video__wrapper">
+          <div class="video__player">
+            <button class="player__play-button" type="submit" title="Воспроизвести"></button>
+          </div>
+        </div>
+      </section>
+      <!-- /video -->
+    </main>
+  </body>
 </html>
