--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
       </div>
     </header>
     <!-- header -->
+
     <main class="main">
       <!-- testimonials -->
       <section class="testimonials">
@@ -195,10 +196,20 @@
             <form class="content__form" action="#" method="post">
               <div class="grid-2-row">
                 <div class="input__wrp">
-                  <input class="form-input" type="text" placeholder="Ваше имя" required/>
+                  <input
+                    class="form-input"
+                    type="text"
+                    placeholder="Ваше имя"
+                    required
+                  />
                 </div>
                 <div class="input__wrp">
-                  <input class="form-input" type="tel" placeholder="Ваш телефон" required/>
+                  <input
+                    class="form-input"
+                    type="tel"
+                    placeholder="Ваш телефон"
+                    required
+                  />
                 </div>
               </div>
               <div class="grid-2-row center-row">
@@ -219,11 +230,46 @@
       <section class="video">
         <div class="container video__wrapper">
           <div class="video__player">
-            <button class="player__play-button" type="submit" title="Воспроизвести"></button>
+            <button
+              class="player__play-button"
+              type="submit"
+              title="Воспроизвести"
+            ></button>
           </div>
         </div>
       </section>
       <!-- /video -->
+
+      <!-- maps -->
+      <section class="map">
+        <div class="container">
+          <h2 class="h2__title map__title">Район на карте</h2>
+          <div class="map__wrapper">
+            <a
+              href="https://yandex.ru/maps/2/saint-petersburg/?utm_medium=mapframe&utm_source=maps"
+              style="color: #eee; font-size: 12px; position: absolute; top: 0px"
+              >Санкт‑Петербург</a
+            ><a
+              href="https://yandex.ru/maps/2/saint-petersburg/house/naberezhnaya_reki_fontanki_90k1/Z0kYdQVpSkcCQFtjfXVzdH9nZA==/?indoorLevel=1&ll=30.329154%2C59.924736&tilt=0.8726646259971648&utm_medium=mapframe&utm_source=maps&z=17"
+              style="
+                color: #eee;
+                font-size: 12px;
+                position: absolute;
+                top: 14px;
+              "
+              >Набережная реки Фонтанки, 90к1 — Яндекс Карты</a
+            ><iframe
+              src="https://yandex.ru/map-widget/v1/?indoorLevel=1&ll=30.329154%2C59.924736&mode=whatshere&tilt=0.8726646259971648&whatshere%5Bpoint%5D=30.329325%2C59.925340&whatshere%5Bzoom%5D=17&z=17"
+              width="100%"
+              height="100%"
+              frameborder="1"
+              allowfullscreen="true"
+              style="position: relative"
+            ></iframe>
+          </div>
+        </div>
+      </section>
+      <!-- /maps -->
     </main>
   </body>
 </html>
